# autoneedle

./: .gitignore  CMakeLists.txt  README.md
include/: Rendering.h  interface_bandmatrix.h  mathheader.h  needle.h  needlematrix.h  sparsediagonalmatrix.h  sparsediagonalmatrixOpt.h
src/: Rendering.cxx  main.cxx  needle.cxx  needlematrix.cxx  sparsediagonalmatrix.cxx  sparsediagonalmatrixOpt.cxx
tests/: speedTestMatrix.cxx  testing.cxx  testingDiagonalSparseMatrix.cxx  testingDiagonalSparseMatrixOpt.cxx
tools/: CodeToC.py  GenerateCode.py
